- fix search inpupt field not aligned anymore with search button - fix a bug when searching for acteurs and realisateurs

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -175,11 +175,15 @@ p {
 }
 
 input{
-  margin: 10px auto;
+  margin: 0px auto;
 }
 
 @media (min-width: $screen-sm-min) {
   .form-control {
     width: 300px;
   }
+}
+
+.control-group {
+  margin: 10px;
 }
